# robot_upstart

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
doc/: conf.py  index.rst  install.rst  jobs.rst  providers.rst  uninstall.rst
doc/sphinxarg/: README.md  ext.py  parser.py
robot_upstart/: __init__.py  install_script.py  job.py  providers.py  uninstall_script.py
scripts/: create_files  foo  getifip  install  mklaunch  mktmpl  mkxacro  mutate_files  uninstall  uninstall_old
src/robot_upstart/: __init__.py  install_script.py  job.py  providers.py  uninstall_script.py
templates/: job-start.em  job-stop.em  job.conf.em  supervisor_job.conf.em  systemd_job.conf.em
test/: test_basics.py
tmpl/: job_conf  start  stop
upstart/: start.tmpl  stop.tmpl
