<?xml version="1.0"?>
<package>
  <name>robot_upstart</name>
  <version>0.1.2</version>
  <description>
    The robot_upstart package provides scripts which may be used to install
    and uninstall Ubuntu Linux upstart jobs which launch groups of roslaunch files.
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <run_depend>daemontools</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>xacro</run_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <architecture_independent/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
