<?xml version="1.0"?>
<package format="2">
  <name>robot_upstart</name>
  <version>0.4.1</version>
  <description>
    The robot_upstart package provides scripts which may be used to install
    and uninstall Ubuntu Linux upstart jobs which launch groups of roslaunch files.
  </description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>daemontools</exec_depend>
  <exec_depend>net-tools</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>util-linux</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <architecture_independent/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
